| Summary: | ASTERISK-26503: app_voicemail: Asterisk crashes when MailboxExists is used | ||
| Reporter: | Doug Lytle (lytledd) | Labels: | |
| Date Opened: | 2016-10-26 07:43:53 | Date Closed: | 2016-10-27 12:08:28 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | Applications/app_voicemail |
| Versions: | 11.23.1 11.24.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian GNU/Linux 7.6 (wheezy) | Attachments: | ( 0) ASTERISK-26503.diff |
| Description: | Just updated from 11.21.2 to 11.24.0. System is shutting itself down when hitting a depreciated dialplan command:
[Oct 26 07:33:07] WARNING[9915][C-00000000]: app_voicemail.c:12038 vm_box_exists: MailboxExists is deprecated. Please use ${VM_INFO(4256@sip,exists)} instead. livasterisk*CLI> Disconnected from Asterisk server Asterisk cleanly ending (0). Executing last minute cleanups | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-10-26 07:43:54.344-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2016-10-26 07:56:21.618-0500 This patch should apply to 11 using: patch -p1 < ASTERISK-26503.diff and should resolve the crash. By: Doug Lytle (lytledd) 2016-10-26 09:56:18.329-0500 Applied cleanly and compiled, I'll put into place tonight and test. Thanks! Doug By: Friendly Automation (friendly-automation) 2016-10-27 10:12:51.812-0500 Change 4210 had a related patch set uploaded by Joshua Colp: app_voicemail: Clear voice mailbox in MailboxExists and MAILBOX_EXISTS. [https://gerrit.asterisk.org/4210|https://gerrit.asterisk.org/4210] By: Friendly Automation (friendly-automation) 2016-10-27 10:14:10.064-0500 Change 4211 had a related patch set uploaded by Joshua Colp: app_voicemail: Clear voice mailbox in MailboxExists and MAILBOX_EXISTS. [https://gerrit.asterisk.org/4211|https://gerrit.asterisk.org/4211] By: Friendly Automation (friendly-automation) 2016-10-27 10:14:27.872-0500 Change 4212 had a related patch set uploaded by Joshua Colp: app_voicemail: Clear voice mailbox in MailboxExists and MAILBOX_EXISTS. [https://gerrit.asterisk.org/4212|https://gerrit.asterisk.org/4212] By: Doug Lytle (lytledd) 2016-10-27 10:28:26.813-0500 Confirming the patch has fixed my crash issue Doug By: Friendly Automation (friendly-automation) 2016-10-27 12:08:28.834-0500 Change 4212 merged by zuul: app_voicemail: Clear voice mailbox in MailboxExists and MAILBOX_EXISTS. [https://gerrit.asterisk.org/4212|https://gerrit.asterisk.org/4212] By: Friendly Automation (friendly-automation) 2016-10-27 12:08:31.948-0500 Change 4211 merged by zuul: app_voicemail: Clear voice mailbox in MailboxExists and MAILBOX_EXISTS. [https://gerrit.asterisk.org/4211|https://gerrit.asterisk.org/4211] By: Friendly Automation (friendly-automation) 2016-10-27 12:08:33.913-0500 Change 4210 merged by zuul: app_voicemail: Clear voice mailbox in MailboxExists and MAILBOX_EXISTS. [https://gerrit.asterisk.org/4210|https://gerrit.asterisk.org/4210] By: Friendly Automation (friendly-automation) 2016-10-27 12:28:18.298-0500 Change 4185 merged by zuul: app_voicemail: Clear voice mailbox in MailboxExists and MAILBOX_EXISTS. [https://gerrit.asterisk.org/4185|https://gerrit.asterisk.org/4185] By: Friendly Automation (friendly-automation) 2016-10-27 13:27:21.055-0500 Change 4183 merged by zuul: app_voicemail: Clear voice mailbox in MailboxExists and MAILBOX_EXISTS. [https://gerrit.asterisk.org/4183|https://gerrit.asterisk.org/4183] By: Friendly Automation (friendly-automation) 2016-10-27 13:27:23.567-0500 Change 4186 merged by zuul: app_voicemail: Clear voice mailbox in MailboxExists and MAILBOX_EXISTS. [https://gerrit.asterisk.org/4186|https://gerrit.asterisk.org/4186] By: Friendly Automation (friendly-automation) 2016-10-27 16:48:29.343-0500 Change 4184 merged by zuul: app_voicemail: Clear voice mailbox in MailboxExists and MAILBOX_EXISTS. [https://gerrit.asterisk.org/4184|https://gerrit.asterisk.org/4184] | ||