apps/app_voicemail.c
@@ -12529,6 +12529,7 @@ static int vm_box_exists(struct ast_channel *chan, const char *data)
 		context++;
 	}
 
+	memset(&svm, 0, sizeof(svm));
 	vmu = find_user(&svm, context, args.mbox);
 	if (vmu) {
 		pbx_builtin_setvar_helper(chan, "VMBOXEXISTSSTATUS", "SUCCESS");
@@ -12560,6 +12561,7 @@ static int acf_mailbox_exists(struct ast_channel *chan, const char *cmd, char *a
 		ast_log(AST_LOG_WARNING, "MAILBOX_EXISTS is deprecated.  Please use ${VM_INFO(%s,exists)} instead.\n", args);
 	}
 
+	memset(&svm, 0, sizeof(svm));
 	vmu = find_user(&svm, ast_strlen_zero(arg.context) ? "default" : arg.context, arg.mbox);
 	ast_copy_string(buf, vmu ? "1" : "0", len);
 	free_user(vmu);
